# rusty

./: .env.example  .env.production  .env.staging  .gitignore  API_EXAMPLES.md  ARCHITECTURE.md  BACKUP_DR.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  EXTENDING.md  IMPLEMENTATION_SUMMARY.md  LOGGING.md  Makefile  OPERATIONS.md  PRODUCTION_READINESS_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
config/: default.toml  production.toml
migrations/: 20240101000000_create_users_table.up.sql  20251206225006_create_cases_table.down.sql  20251206225006_create_cases_table.up.sql  20251206225104_create_documents_and_workflow.down.sql  20251206225104_create_documents_and_workflow.up.sql  20251206225138_create_litigation_tables.down.sql  20251206225138_create_litigation_tables.up.sql  20251206225216_create_discovery_billing_compliance.down.sql  20251206225216_create_discovery_billing_compliance.up.sql  20251206225300_create_additional_entities.down.sql  20251206225300_create_additional_entities.up.sql
monitoring/: prometheus.yml
src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs
src/api/: health.rs  mod.rs  users.rs
src/api/cases/: handlers.rs  service.rs
src/api/dashboard/: handlers.rs  mod.rs  models.rs  service.rs
src/api/docket/: handlers.rs  service.rs
src/api/documents/: handlers.rs  service.rs
src/api/evidence/: handlers.rs  service.rs
src/api/motions/: handlers.rs  service.rs
src/api/tasks/: handlers.rs  mod.rs  service.rs
src/models/: billing.rs  case_management.rs  communication.rs  compliance.rs  discovery.rs  document.rs  litigation.rs  mod.rs  organization.rs  user.rs  workflow.rs
tests/: integration_tests.rs
